--- a/paper.bib
+++ b/paper.bib
@@ -1,6 +1,6 @@
 
 
-@Article{BayesPostEst,
+@article{BayesPostEst,
   doi       = {10.21105/joss.01722},
   url       = {https://doi.org/10.21105/joss.01722},
   year      = {2019},
