--- a/paper.bib
+++ b/paper.bib
@@ -1,5 +1,3 @@
-
-
 @article{BayesPostEst,
   doi       = {10.21105/joss.01722},
   url       = {https://doi.org/10.21105/joss.01722},
@@ -13,7 +11,7 @@
   journal   = {Journal of Open Source Software}
 }
 
-@Article{coda,
+@article{coda,
   title   = {CODA: Convergence Diagnosis and Output Analysis for MCMC},
   author  = {Martyn Plummer and Nicky Best and Kate Cowles and Karen
     Vines},
@@ -23,11 +21,11 @@
   number  = {1},
   pages   = {7--11},
   url     = {https://journal.r-project.org/archive/},
-  pdf     = {https://www.r-project.org/doc/Rnews/Rnews_2006-1.pdf},
+  pdf     = {https://www.r-project.org/doc/Rnews/Rnews_2006-1.pdf}
 }
 
 
-@Article{devalpine2017,
+@article{devalpine2017,
   title   = {Programming with models: writing statistical algorithms
     for general model structures with {NIMBLE}},
   journal = {Journal of Computational and Graphical Statistics},
@@ -38,10 +36,10 @@
   author  = {Perry {de Valpine} and Daniel Turek and Christopher
     Paciorek and Cliff Anderson-Bergman and Duncan {Temple Lang} and
     Ras Bodik},
-  doi     = {10.1080/10618600.2016.1172487},
+  doi     = {10.1080/10618600.2016.1172487}
 }
 
-@Manual{nimble,
+@manual{nimble,
   title = {{NIMBLE}: {MCMC}, Particle Filtering, and Programmable
       Hierarchical Modeling},
   author = {Perry {de Valpine} and Christopher Paciorek and Daniel
@@ -52,7 +50,7 @@
   year = {2021},
   version = {0.11.1},
   note = {{R} package version 0.11.1},
-  doi = {10.5281/zenodo.1211190},
+  doi = {10.5281/zenodo.1211190}
 }
 
 @article{Goudie20,
@@ -65,7 +63,7 @@
   doi = {10.18637/jss.v095.i07}
 }
 
-@Article{MCMCvis,
+@article{MCMCvis,
   title   = {MCMCvis: Tools to visualize, manipulate, and summarize
     MCMC output},
   author  = {Casey Youngflesh},
@@ -74,10 +72,10 @@
   volume  = {3},
   number  = {24},
   doi     = {10.21105/joss.00640},
-  pages   = {640},
+  pages   = {640}
 }
 
-@Article{lunn2009bugs,
+@article{lunn2009bugs,
   title     = {The BUGS project: Evolution, critique and future directions},
   author    = {Lunn, David and Spiegelhalter, David and Thomas, Andrew and Best, Nicky},
   journal   = {Statistics in medicine},
@@ -88,7 +86,7 @@
   publisher = {Wiley Online Library}
 }
 
-@Article{lunn2000winbugs,
+@article{lunn2000winbugs,
   title     = {WinBUGS-a Bayesian modelling framework: concepts, structure, and extensibility},
   author    = {Lunn, David J and Thomas, Andrew and Best, Nicky and Spiegelhalter, David},
   journal   = {Statistics and computing},
@@ -127,7 +125,7 @@
   organization = {Vienna, Austria.}
 }
 
-@Article{PyMC,
+@article{PyMC,
   doi       = {10.7717/peerj-cs.55},
   url       = {https://doi.org/10.7717/peerj-cs.55},
   year      = {2016},
@@ -140,7 +138,7 @@
   journal   = {{PeerJ} Computer Science}
 }
 
-@Article{R2WinBUGS,
+@article{R2WinBUGS,
   title   = {R2WinBUGS: A Package for Running WinBUGS from R},
   author  = {Sibylle Sturtz and Uwe Ligges and Andrew Gelman},
   journal = {Journal of Statistical Software},
@@ -148,7 +146,7 @@
   pages   = {1--16},
   number  = {3},
   volume  = {12},
-  url     = {http://www.jstatsoft.org},
+  url     = {http://www.jstatsoft.org}
 }
 
 
@@ -157,7 +155,7 @@ title   = {{RStan}: the {R} interface to {Stan}},
 author  = {{Stan Development Team}},
 note    = {R package version 2.21.2},
 year    = {2020},
-url     = {http://mc-stan.org/},
+url     = {http://mc-stan.org/}
 }
 
 @Misc{park21,
@@ -166,10 +164,10 @@ author  = {Jong Hee Park},
 year    = {2021},
 month   = {5--19},
 publisher = {CRAN},
-url     = {https://CRAN.R-project.org/view=Bayesian},
+url     = {https://CRAN.R-project.org/view=Bayesian}
 }
 
-@Article{samplerCompare,
+@article{samplerCompare,
   title   = {Introduction to {SamplerCompare}},
   author  = {Madeleine B. Thompson},
   journal = {Journal of Statistical Software},
@@ -177,10 +175,10 @@ url     = {https://CRAN.R-project.org/view=Bayesian},
   volume  = {43},
   number  = {12},
   pages   = {1--10},
-  url     = {http://www.jstatsoft.org/v43/i12/},
+  url     = {http://www.jstatsoft.org/v43/i12/}
 }
 
-@Article{martin11,
+@article{martin11,
   title     = {{MCMCpack}: Markov Chain Monte Carlo in {R}},
   author    = {Andrew D. Martin and Kevin M. Quinn and Jong Hee Park},
   journal   = {Journal of Statistical Software},
@@ -188,14 +186,14 @@ url     = {https://CRAN.R-project.org/view=Bayesian},
   volume    = {42},
   number    = {9},
   pages     = {22},
-  url       = {https://www.jstatsoft.org/v42/i09/},
+  url       = {https://www.jstatsoft.org/v42/i09/}
 }
 
-@Manual{statisticat21,
+@manual{statisticat21,
   author    = {{Statisticat} and {LLC.}},
   year      = {2021},
   title     = {LaplacesDemon: Complete Environment for Bayesian Inference},
   note      = {R package version 16.1.6},
   url       = {https://web.archive.org/web/20150206004624/http://www.bayesian-inference.com/software},
-  publisher = {Bayesian-Inference.com},
+  publisher = {Bayesian-Inference.com}
 }
