--- a/paper.bib
+++ b/paper.bib
@@ -1,199 +1,59 @@
-@article{BayesPostEst,
-  doi       = {10.21105/joss.01722},
-  url       = {https://doi.org/10.21105/joss.01722},
-  year      = {2019},
-  publisher = {The Open Journal},
-  volume    = {4},
-  number    = {42},
-  pages     = {1722},
-  author    = {Shana Scogin and Johannes Karreth and Andreas Beger and Rob Williams},
-  title     = {BayesPostEst: An R Package to Generate Postestimation Quantities for Bayesian MCMC Estimation},
-  journal   = {Journal of Open Source Software}
+@article{Pearson:2017,
+  	url = {http://adsabs.harvard.edu/abs/2017arXiv170304627P},
+  	Archiveprefix = {arXiv},
+  	Author = {{Pearson}, S. and {Price-Whelan}, A.~M. and {Johnston}, K.~V.},
+  	Eprint = {1703.04627},
+  	Journal = {ArXiv e-prints},
+  	Keywords = {Astrophysics - Astrophysics of Galaxies},
+  	Month = mar,
+  	Title = {{Gaps in Globular Cluster Streams: Pal 5 and the Galactic Bar}},
+  	Year = 2017
 }
 
-@article{coda,
-  title   = {CODA: Convergence Diagnosis and Output Analysis for MCMC},
-  author  = {Martyn Plummer and Nicky Best and Kate Cowles and Karen
-    Vines},
-  journal = {R News},
-  year    = {2006},
-  volume  = {6},
-  number  = {1},
-  pages   = {7--11},
-  url     = {https://journal.r-project.org/archive/},
-  pdf     = {https://www.r-project.org/doc/Rnews/Rnews_2006-1.pdf}
+@book{Binney:2008,
+  	url = {http://adsabs.harvard.edu/abs/2008gady.book.....B},
+  	Author = {{Binney}, J. and {Tremaine}, S.},
+  	Booktitle = {Galactic Dynamics: Second Edition, by James Binney and Scott Tremaine.~ISBN 978-0-691-13026-2 (HB).~Published by Princeton University Press, Princeton, NJ USA, 2008.},
+  	Publisher = {Princeton University Press},
+  	Title = {{Galactic Dynamics: Second Edition}},
+  	Year = 2008
 }
 
-
-@article{devalpine2017,
-  title   = {Programming with models: writing statistical algorithms
-    for general model structures with {NIMBLE}},
-  journal = {Journal of Computational and Graphical Statistics},
-  volume  = {26},
-  issue   = {2},
-  pages   = {403-413},
-  year    = {2017},
-  author  = {Perry {de Valpine} and Daniel Turek and Christopher
-    Paciorek and Cliff Anderson-Bergman and Duncan {Temple Lang} and
-    Ras Bodik},
-  doi     = {10.1080/10618600.2016.1172487}
+@article{gaia,
+    author = {{Gaia Collaboration}},
+    title = "{The Gaia mission}",
+    journal = {Astronomy and Astrophysics},
+    archivePrefix = "arXiv",
+    eprint = {1609.04153},
+    primaryClass = "astro-ph.IM",
+    keywords = {space vehicles: instruments, Galaxy: structure, astrometry, parallaxes, proper motions, telescopes},
+    year = 2016,
+    month = nov,
+    volume = 595,
+    doi = {10.1051/0004-6361/201629272},
+    url = {http://adsabs.harvard.edu/abs/2016A%26A...595A...1G},
 }
 
-@manual{nimble,
-  title = {{NIMBLE}: {MCMC}, Particle Filtering, and Programmable
-      Hierarchical Modeling},
-  author = {Perry {de Valpine} and Christopher Paciorek and Daniel
-      Turek and Nick Michaud and Cliff Anderson-Bergman and Fritz
-      Obermeyer and Claudia {Wehrhahn Cortes} and Abel Rodrìguez and
-      Duncan {Temple Lang} and Sally Paganin},
-  url = {https://cran.r-project.org/package=nimble},
-  year = {2021},
-  version = {0.11.1},
-  note = {{R} package version 0.11.1},
-  doi = {10.5281/zenodo.1211190}
+@article{astropy,
+    author = {{Astropy Collaboration}},
+    title = "{Astropy: A community Python package for astronomy}",
+    journal = {Astronomy and Astrophysics},
+    archivePrefix = "arXiv",
+    eprint = {1307.6212},
+    primaryClass = "astro-ph.IM",
+    keywords = {methods: data analysis, methods: miscellaneous, virtual observatory tools},
+    year = 2013,
+    month = oct,
+    volume = 558,
+    doi = {10.1051/0004-6361/201322068},
+    url = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A}
 }
 
-@article{Goudie20,
-  title = {{MultiBUGS}: A parallel implementation of the {BUGS} modelling framework for faster Bayesian inference.},
-  author = {Goudie, R. J. B. and Turner, R. M. and De Angelis, D. and Thomas, A.},
+@misc{fidgit,
+  author = {A. M. Smith and K. Thaney and M. Hahnel},
+  title = {Fidgit: An ungodly union of GitHub and Figshare},
   year = {2020},
-  journal = {Journal of Statistical Software},
-  volume = {95},
-  number = {7},
-  doi = {10.18637/jss.v095.i07}
-}
-
-@article{MCMCvis,
-  title   = {MCMCvis: Tools to visualize, manipulate, and summarize
-    MCMC output},
-  author  = {Casey Youngflesh},
-  year    = {2018},
-  journal = {Journal of Open Source Software},
-  volume  = {3},
-  number  = {24},
-  doi     = {10.21105/joss.00640},
-  pages   = {640}
-}
-
-@article{lunn2009bugs,
-  title     = {The BUGS project: Evolution, critique and future directions},
-  author    = {Lunn, David and Spiegelhalter, David and Thomas, Andrew and Best, Nicky},
-  journal   = {Statistics in medicine},
-  volume    = {28},
-  number    = {25},
-  pages     = {3049--3067},
-  year      = {2009},
-  publisher = {Wiley Online Library}
-}
-
-@article{lunn2000winbugs,
-  title     = {WinBUGS-a Bayesian modelling framework: concepts, structure, and extensibility},
-  author    = {Lunn, David J and Thomas, Andrew and Best, Nicky and Spiegelhalter, David},
-  journal   = {Statistics and computing},
-  volume    = {10},
-  number    = {4},
-  pages     = {325--337},
-  year      = {2000},
-  publisher = {Springer}
-}
-
-
-@misc{kellner21,
-  author    = {Ken Kellner},
-  title     = {{jagsUI}: A Wrapper Around {'rjags'} to Streamline {'JAGS'} Analyses.},
-  year      = {2019},
-  publisher = {CRAN},
-  url       = {https://cran.r-project.org/package=jagsUI}
-}
-
-@Misc{plummer19,
-  author    = {Martyn Plummer},
-  title     = {{Rjags}: Bayesian graphical models using {MCMC}.},
-  year      = {2019},
-  publisher = {CRAN},
-  url       = {https://cran.r-project.org/package=rjags}
-}
-
-@inproceedings{plummer2003jags,
-  title        = {JAGS: A program for analysis of Bayesian graphical models using Gibbs sampling},
-  author       = {Plummer, Martyn and others},
-  booktitle    = {Proceedings of the 3rd international workshop on distributed statistical computing},
-  volume       = {124},
-  number       = {125.10},
-  pages        = {1--10},
-  year         = {2003},
-  organization = {Vienna, Austria.}
-}
-
-@article{PyMC,
-  doi       = {10.7717/peerj-cs.55},
-  url       = {https://doi.org/10.7717/peerj-cs.55},
-  year      = {2016},
-  month     = {apr},
-  publisher = {{PeerJ}},
-  volume    = {2},
-  pages     = {e55},
-  author    = {John Salvatier and Thomas V. Wiecki and Christopher Fonnesbeck},
-  title     = {Probabilistic programming in Python using {PyMC}3},
-  journal   = {{PeerJ} Computer Science}
-}
-
-@article{R2WinBUGS,
-  title   = {R2WinBUGS: A Package for Running WinBUGS from R},
-  author  = {Sibylle Sturtz and Uwe Ligges and Andrew Gelman},
-  journal = {Journal of Statistical Software},
-  year    = {2005},
-  pages   = {1--16},
-  number  = {3},
-  volume  = {12},
-  url     = {http://www.jstatsoft.org}
-}
-
-
-@Misc{Rstan,
-title   = {{RStan}: the {R} interface to {Stan}},
-author  = {{Stan Development Team}},
-note    = {R package version 2.21.2},
-year    = {2020},
-url     = {http://mc-stan.org/}
-}
-
-@Misc{park21,
-title   = {{CRAN} {Task} {View}: {Bayesian} {Inference}},
-author  = {Jong Hee Park},
-year    = {2021},
-month   = {5--19},
-publisher = {CRAN},
-url     = {https://CRAN.R-project.org/view=Bayesian}
-}
-
-@article{samplerCompare,
-  title   = {Introduction to {SamplerCompare}},
-  author  = {Madeleine B. Thompson},
-  journal = {Journal of Statistical Software},
-  year    = {2011},
-  volume  = {43},
-  number  = {12},
-  pages   = {1--10},
-  url     = {http://www.jstatsoft.org/v43/i12/}
-}
-
-@article{martin11,
-  title     = {{MCMCpack}: Markov Chain Monte Carlo in {R}},
-  author    = {Andrew D. Martin and Kevin M. Quinn and Jong Hee Park},
-  journal   = {Journal of Statistical Software},
-  year      = {2011},
-  volume    = {42},
-  number    = {9},
-  pages     = {22},
-  url       = {https://www.jstatsoft.org/v42/i09/}
-}
-
-@manual{statisticat21,
-  author    = {{Statisticat} and {LLC.}},
-  year      = {2021},
-  title     = {LaplacesDemon: Complete Environment for Bayesian Inference},
-  note      = {R package version 16.1.6},
-  url       = {https://web.archive.org/web/20150206004624/http://www.bayesian-inference.com/software},
-  publisher = {Bayesian-Inference.com}
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  url = {https://github.com/arfon/fidgit}
 }
