--- a/paper.bib
+++ b/paper.bib
@@ -1,3 +1,17 @@
+@article{devalpine2017,
+  title   = {Programming with models: writing statistical algorithms
+    for general model structures with {NIMBLE}},
+  journal = {Journal of Computational and Graphical Statistics},
+  volume  = {26},
+  issue   = {2},
+  pages   = {403-413},
+  year    = {2017},
+  author  = {Perry {de Valpine} and Daniel Turek and Christopher
+    Paciorek and Cliff Anderson-Bergman and Duncan {Temple Lang} and
+    Ras Bodik},
+  doi     = {10.1080/10618600.2016.1172487}
+}
+
 @article{Pearson:2017,
   	url = {http://adsabs.harvard.edu/abs/2017arXiv170304627P},
   	Archiveprefix = {arXiv},
