--- a/paper.bib
+++ b/paper.bib
@@ -1,3 +1,29 @@
+@article{BayesPostEst,
+  doi       = {10.21105/joss.01722},
+  url       = {https://doi.org/10.21105/joss.01722},
+  year      = {2019},
+  publisher = {The Open Journal},
+  volume    = {4},
+  number    = {42},
+  pages     = {1722},
+  author    = {Shana Scogin and Johannes Karreth and Andreas Beger and Rob Williams},
+  title     = {BayesPostEst: An R Package to Generate Postestimation Quantities for Bayesian MCMC Estimation},
+  journal   = {Journal of Open Source Software}
+}
+
+@article{coda,
+  title   = {CODA: Convergence Diagnosis and Output Analysis for MCMC},
+  author  = {Martyn Plummer and Nicky Best and Kate Cowles and Karen
+    Vines},
+  journal = {R News},
+  year    = {2006},
+  volume  = {6},
+  number  = {1},
+  pages   = {7--11},
+  url     = {https://journal.r-project.org/archive/},
+  pdf     = {https://www.r-project.org/doc/Rnews/Rnews_2006-1.pdf}
+}
+
 @article{devalpine2017,
   title   = {Programming with models: writing statistical algorithms
     for general model structures with {NIMBLE}},
